<resources>
    <string name="app_name">Praktisi Mengajar</string>
    <string name="welcome_text_2">Pertemuan ke-2</string>
    <string name="detail_screen">Halaman detail</string>
    <string name="empty">Kosong</string>
    <string name="result_not_ok">RESULT_NOT_OK</string>
    <string name="result_ok">RESULT_OK: %1$s</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="navigation_without_data">Navigasi tanpa data</string>
    <string name="navigation_with_data">Navigasi dengan data</string>
    <string name="naivigation_with_object">Navigasi dengan object</string>
    <string name="navigate_by_waiting_for_results">Navigasi dengan menunggu result</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="action_send">ACTION_SEND</string>
    <string name="action_view">ACTION_VIEW</string>
    <string name="value_from_intent_empty_or_not">Value dari intent - kosong atau dengan data</string>
    <string name="value_from_intent_object">Value dari intent - object</string>
    <string name="intent_waiting_for_result">Intent menunggu result</string>
    <string name="send_result">Kirim result</string>
    <string name="add">Tambah</string>
    <string name="kosong_nih">Kosong nih</string>
    <string name="intent">Intent</string>
    <string name="lifecycle_amp_savestate"><![CDATA[Lifecycle & SaveState]]></string>
    <string name="recyclerview_linear">RecyclerView Linear</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="recyclerview_linear_horizontal">RecyclerView Linear Horizontal</string>
    <string name="linear_vertical">Linear - Vertical</string>
    <string name="linear_horizontal">Linear - Horizontal</string>
    <string name="recyclerview_grid_vertical">RecyclerView Grid Vertical</string>
    <string name="grid_vertical">Grid - Vertical</string>
    <string name="grid_horizontal">Grid - Horizontal</string>
    <string name="staggered_vertical">Staggered - Vertical</string>
    <string name="kumpulan_contoh_code">Kumpulan contoh code</string>
    <string name="recyclerview_staggered">RecyclerView Staggered</string>
    <string name="recyclerview_multiple">RecyclerView Multiple</string>
    <string name="multiple_item_view">Multiple Item View</string>
    <string name="retrofit">Retrofit</string>
    <string name="food_name">Food name</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="result">Result</string>
    <string name="room">Room</string>
    <string name="food">FOOD</string>
</resources>