<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recyclerView.RecyclerViewActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/recyclerview"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_rv_linear_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/linear_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <Button
        android:id="@+id/btn_rv_linear_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/linear_horizontal"
        app:layout_constraintEnd_toEndOf="@id/btn_rv_linear_vertical"
        app:layout_constraintStart_toStartOf="@id/btn_rv_linear_vertical"
        app:layout_constraintTop_toBottomOf="@id/btn_rv_linear_vertical" />

    <Button
        android:id="@+id/btn_rv_grid_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grid_vertical"
        app:layout_constraintEnd_toEndOf="@id/btn_rv_linear_vertical"
        app:layout_constraintStart_toStartOf="@id/btn_rv_linear_vertical"
        app:layout_constraintTop_toBottomOf="@id/btn_rv_linear_horizontal" />

    <Button
        android:id="@+id/btn_rv_grid_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grid_horizontal"
        app:layout_constraintEnd_toEndOf="@id/btn_rv_linear_vertical"
        app:layout_constraintStart_toStartOf="@id/btn_rv_linear_vertical"
        app:layout_constraintTop_toBottomOf="@id/btn_rv_grid_vertical" />

    <Button
        android:id="@+id/btn_rv_staggered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/staggered_vertical"
        app:layout_constraintEnd_toEndOf="@id/btn_rv_linear_vertical"
        app:layout_constraintStart_toStartOf="@id/btn_rv_linear_vertical"
        app:layout_constraintTop_toBottomOf="@id/btn_rv_grid_horizontal" />

    <Button
        android:id="@+id/btn_rv_multiple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiple_item_view"
        app:layout_constraintEnd_toEndOf="@id/btn_rv_linear_vertical"
        app:layout_constraintStart_toStartOf="@id/btn_rv_linear_vertical"
        app:layout_constraintTop_toBottomOf="@id/btn_rv_staggered" />

</androidx.constraintlayout.widget.ConstraintLayout>